--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "body-parser": "^2.2.1",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "mysql": "^2.18.1"
   },
   "name": "login-lecture",
   "version": "1.0.0",
