--- a/app/package.json
+++ b/app/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "app-root-path": "^3.1.0",
     "body-parser": "^2.2.1",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
+    "morgan": "^1.10.1",
     "mysql": "^2.18.1"
   },
   "name": "login-lecture",
